# s3_api

./: README.md  main.py  paths.txt  pyproject.toml  requirements.txt
src/s3Api/: executor.py  s3_api.py
