[project]
name = "slightlyeasiers3api"
version = "1.0"
authors = [
  { name="Gavin Weiner", email="gavin@weiner-family.org" },
]
description = "an s3api wrapper, uses boto3 and async, pretty simple"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/pypa/sampleproject"
Issues = "https://github.com/pypa/sampleproject/issues"